cmake_minimum_required(VERSION 3.29)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(C__ main.cpp
        dijkstras_algorithm.cpp
        reverse_linked_list.cpp
        merge_linked_lists.cpp
        shift_linked_list.cpp
        lowest_common_manager.cpp
        interweaving_strings.cpp
        find_loop.cpp
        climbing_stairs.cpp
        minimum_score_triangulation_of_polygon.cpp
        egg_drop.cpp
        burst_ballons.cpp
        solve_sudoku.cpp
        generate_div_tags.cpp
        ambiguous_measurement.cpp
        shifted_binary_search.cpp
        search_for_range.cpp
        quick_sort.cpp
        quick_select.cpp
        index_equals_value.cpp
        heap_sort.cpp
        shorten_path.cpp
        largest_rectangle_under_skyline.cpp
        longest_substring_without_duplication.cpp
        maximum_subarray.cpp
        insert_interval.cpp
        01_matrix.cpp
        k_closest_points_to_origin.cpp
        3sum.cpp
        binary_tree_level_order_traversal.cpp
        clone_graph.cpp
        postfix_evaluate.cpp
        course_schedule.cpp)
