cmake_minimum_required(VERSION 3.29)
project(C__)

set(CMAKE_CXX_STANDARD 20)

add_executable(C__ main.cpp
        dijkstras_algorithm.cpp
        reverse_linked_list.cpp
        merge_linked_lists.cpp
        shift_linked_list.cpp
        lowest_common_manager.cpp
        interweaving_strings.cpp
        find_loop.cpp
        climbing_stairs.cpp
        minimum_score_triangulation_of_polygon.cpp
        egg_drop.cpp
        burst_ballons.cpp
        solve_sudoku.cpp
        generate_div_tags.cpp
        ambiguous_measurement.cpp
        shifted_binary_search.cpp
        search_for_range.cpp
        quick_sort.cpp
        quick_select.cpp
        index_equals_value.cpp
        heap_sort.cpp
        shorten_path.cpp
        largest_rectangle_under_skyline.cpp
        longest_substring_without_duplication.cpp
        maximum_subarray.cpp
        insert_interval.cpp
        01_matrix.cpp
        k_closest_points_to_origin.cpp
        3sum.cpp
        binary_tree_level_order_traversal.cpp
        clone_graph.cpp
        postfix_evaluate.cpp
        course_schedule.cpp
        minimum_fountains.cpp
        max_events_attended.cpp
        longest_binary_tree_consecutive_sequence.cpp
        longest_substring_containing_vowels_in_even.cpp
        minimum_window_substring.cpp
        contains_duplicate_2.cpp
        longest_harmonious_subsequence.cpp
        maximum_average_subarray.cpp
        find_k_beauty_of_number.cpp
        maximum_length_substring.cpp
        longest_nice_substring.cpp
        trapping_rain_water.cpp
        word_ladder.cpp
        basic_calculator.cpp
        infix_to_postfix.cpp
        maximum_profit_in_job_scheduling.cpp
        largest_rectangle_in_histogram.cpp
        sliding_window_maximum.cpp
        first_missing_positive.cpp
        paliindrome_pairs.cpp
        word_ladder_2.cpp
        bus_routes.cpp
        longest_increasing_path_in_matrix.cpp
        lru_cache.cpp
        reverse_nodes_in_k_group.cpp
        smallest_range_covering_elements_from_k_lists.cpp
        binary_tree_maximum_path_sum.cpp
        maximum_frequency_stack.cpp
        n_queens.cpp
        super_egg_drop.cpp
        evaluate_reverse_polish_notation.cpp
        implement_trie.cpp
        coin_change.cpp
        product_of_array_except_self.cpp
        validate_binary_search_tree.cpp
        number_of_islands.cpp
        rotting_oranges.cpp
        combination_sum.cpp
        permutations.cpp
        lowest_common_ancestor_of_binary_tree.cpp
        word_break.cpp
        partition_equal_subset_sum.cpp
        subsets.cpp
        binary_tree_right_side_view.cpp
        unique_paths.cpp
        construct_binary_tree_from_preorder_inorder.cpp
        container_with_most_water.cpp
        word_search.cpp
        find_all_anagrams_in_string.cpp
        minimum_height_trees.cpp
        task_scheduler.cpp
        kth_smallest_element_in_bst.cpp
        daily_temperatures.cpp
        house_robber.cpp
        minesweeper.cpp
        partition_to_k_equal_subsets.cpp
        merge_sort.cpp
        gas_station.cpp
        serialize_deserialize_binary_tree.cpp
        longest_valid_parentheses.cpp
        zero_array_transformation.cpp
        meeting_rooms_2.cpp
        meeting_rooms.cpp
        zero_array_transformation_2.cpp
        race_car.cpp
        single_number_2.cpp
        reorganize_string.cpp
        contiguous_array.cpp
        linked_list_cycle_2.cpp
        find_the_celebrity.cpp
        reverse_words_in_string.cpp
        integer_to_english_words.cpp
        subarray_sum_equals_k.cpp
        top_k_frequent_elements.cpp
        product_of_last_k_numbers.cpp
        shortest_distance_from_all_buildings.cpp
        maximum_beauty_of_array.cpp
        two_best_non_overlapping_events.cpp
        move_pieces_to_obtain_string.cpp
        minimum_limit_of_balls_in_bag.cpp
        flatten_binary_tree_to_linked_list.cpp
        longest_repeating_character_replacement.cpp
        add_spaces_to_string.cpp
        find_the_power_of_k_size_subarrays.cpp
        minimum_area_rectangle.cpp
        reveal_cards_in_increasing_order.cpp
        flip_columns_for_maximum_number_of_equal_rows.cpp
        the_earliest_moment_everyone_becomes_friends.cpp
        longest_arithmetic_subsequence_of_given_difference.cpp
        the_kth_factor_of_n.cpp
        frequency_of_the_most_frequent_element.cpp
        count_unguarded_cells_in_grid.cpp
        continuous_subarray.cpp
        koko_eating_bananas.cpp
        maximum_subarray_of_distinct_subarray_with_length_k.cpp
        identify_largest_outlier_in_array.cpp
        horizon.cpp
        triangle.cpp
        construct_string_with_repeat_limit.cpp
        number_of_connected_components_in_undirected_graph.cpp
        count_numbers_with_unique_digits.cpp
        furthest_building_you_can_reach.cpp
        sort_transformed_array.cpp
        median_of_two_sorted_arrays.cpp
        split_array_largest_sum.cpp
        minimum_time_to_visit_cell_in_grid.cpp
        minimum_window_subsequence.cpp
        maximal_rectangle.cpp
        russian_doll_envelopes.cpp
        longest_increasing_subsequence.cpp
        odd_even_jump.cpp
        sum_of_subarray_minimums.cpp
        regular_expression_matching.cpp
        count_of_smaller_numbers_after_self.cpp
        reverse_pairs.cpp
)
